# ShopBot-Ecommerce_Chatbot

./: .gitignore  LICENSE  embeddings.py  graph.py  indexing.py  llm.py  main.py  nodes.py  pyproject.toml  retriever.py  schema.py
app/: graph.py  indexing.py  nodes.py  retriever.py
core/: config.py
logics/: graph.py  indexing.py  llm.py  nodes.py  retriever.py  schema.py
